# privacy-filter-jp.cpp

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README-ja.md  README.md
.github/workflows/: ci.yml  release.yml
bench/: banded_attn_proto.cpp  gemm_microbench.cpp  pf-bench.cpp
datasets/benchmark/: challenge.jsonl  challenge2.jsonl  eval.jsonl  eval2.jsonl  train.jsonl
datasets/samples/: jp_sample.jsonl
demo/: .gitignore  document.txt  gen_corpus.py  gen_scan.py  make.sh  make_scan.sh  pii_duel.py  pii_scan.py  scan_doc.txt  scan_doc_ja.txt
demo/traces/cpu/: content.json  engines.json
demo/traces/gpu/: content.json  engines.json
demo/traces/scan/: content.json  engines.json
demo/traces/scan_ja/: content.json  engines.json
docker/: Dockerfile.arm64
docs/: cpu-perf.md  finetuning-jp.md
label_space/: jp-basic.json
model-cards/: privacy-filter-jp.md  privacy-filter-multilingual.md  privacy-filter-nemotron.md  privacy-filter.md
scripts/: bench_torch.py  convert.py  convert_stockmark_ner.py  eval_spans.py  finetune_jp.py  gen_synthetic_address_jp.py  gen_synthetic_boundary_jp.py  gen_synthetic_date_id_jp.py  gen_synthetic_structured_pii_jp.py  gen_unicode.py  hf_tok_diff.py  publish_hf.py  requant_q8.py  run_pf_hf.py
src/: backend.cpp  model.cpp  ner.cpp  ner.h  pf.cpp  tokenizer.cpp  tokenizer.h  unicode_data.inc
tests/: CMakeLists.txt  test_graph_blocks.cpp  test_ner.cpp  test_tokenizer.cpp  test_window_stitch.cpp
tools/: pf-cli.cpp
